in memory implementation of create account endpoint
